--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   <body>
     <h1 class="title">Lorem, ipsum dolor.</h1>
     <button>Click me</button>
+    <button>Click me</button>
+    <button>Click me</button>
+    <button>Click me</button>
   </body>
 </html>
